Update Constant Swagger
